[package]
name = "zshare"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.145"
zenoh = { git = "https://github.com/eclipse-zenoh/zenoh.git" }
async-std = "1.11.0"
futures = "0.3.24"
uuid = "1.1.2"
lazy_static = "1.4.0"
thiserror = "1.0.37"
rmp-serde = "1.1.1"
flume = "0.10.14"
